# cookieplone

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .vale.ini  CHANGES.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: changelog.yml  docs.yml  main.yml
cookieplone/: __init__.py  __main__.py  _types.py  cli.py  data.py  exceptions.py  generator.py  logger.py  repository.py  settings.py  wizard.py
cookieplone/cli/: __init__.py  converter.py
cookieplone/config/: __init__.py  merge.py  schemas.py  state.py  user.py  v1.py  v2.py
cookieplone/config/schemas/: __init__.py  _types.py  cookieplone_config.schema.json  repository.py  repository_config.schema.json  template.py
cookieplone/filters/: __init__.py
cookieplone/generator/: __init__.py  main.py
cookieplone/templates/: bake.py  extends_fixtures.py  fixtures.py  types.py
cookieplone/utils/: __init__.py  answers.py  config.py  console.py  containers.py  cookiecutter.py  files.py  formatters.py  git.py  internal.py  npm.py  parsers.py  plone.py  post_gen.py  sanity.py  subtemplates.py  summary.py  validators.py  versions.py
cookieplone/utils/commands/: __init__.py
cookieplone/validators/: __init__.py
cookieplone/wizard/: __init__.py  form.py  parser.py  prompt.py  questions.py
docs/: .gitignore  Makefile
docs/src/: conf.py  glossary.md  index.md  robots.txt  troubleshooting.md
docs/src/_templates/: 404.html
docs/src/concepts/: answers-and-replay.md  background.md  computed-defaults.md  how-cookieplone-works.md  index.md  subtemplates.md  template-repositories.md  validators-and-filters.md
docs/src/how-to-guides/: add-a-filter.md  add-a-validator.md  add-computed-fields.md  add-validators-to-your-template.md  automate-with-ci.md  call-subtemplates-from-a-hook.md  configure-cookieplone.md  create-a-hidden-template.md  debug-a-failed-generation.md  extend-an-upstream-template-repository.md  index.md  recover-from-mistakes.md  run-post-gen-actions.md  set-up-dev-environment.md  test-an-extending-repository.md  update-existing-project.md  use-a-custom-template-repository.md  use-a-prerelease-version.md  use-an-answers-file.md  use-built-in-filters.md  write-a-pre-prompt-hook.md
docs/src/reference/: cli.md  configuration.md  environment-variables.md  filters.md  index.md  repository-config.md  schema-v1.md  schema-v2.md  validators.md
docs/src/tutorials/: create-a-template.md  create-your-first-plone-project.md  index.md
news/: +87.feature  +90.bugfix  +PythonVersionSupport.internal  +__generator_sha.feature  +all_.bugfix  +annotate_context.tests  +as_major_minor.feature  +chardet.bugfix  +cli.feature  +codeowners.internal  +config-converter.feature  +cookiecutter-271.internal  +coverage.internal  +defaultvalidators.feature  +dependabot.internal  +early-version-gate.feature  +extra_context.feature  +format_python_codebase.feature  +generator.feature  +gha.internal  +gha.tests  +git-blame-ignore-revs.internal  +gitpython-3150.internal  +load-answers.feature  +logger.internal  +namespace.bugfix  +namespace.feature  +newline.bugfix  +node24.bugfix  +package_namespace_path.feature  +packaging-262.internal  +pipxformatter.bugfix  +plone62.feature  +plonehelpers.bugfix  +precommit.internal  +prerelease-docs.documentation  +pyproject.internal  +pytest.tests  +python.breaking  +python.feature  (+94 more)
tests/: conftest.py  test_cli.py  test_exceptions.py  test_filters.py  test_repository.py  test_repository_extends.py  test_repository_extends_resolve.py  test_repository_overlay.py
tests/_resources/config/: cookieplone-config-no-summary.json  cookieplone-config.json  extra-v1-project.json  replay-v1-project.json  v1-agents_instructions.json  v1-backend_addon.json  v1-ci_gh_backend_addon.json  v1-ci_gh_classic_project.json  v1-ci_gh_frontend_addon.json  v1-ci_gh_monorepo_addon.json  v1-ci_gh_project.json  v1-classic_project.json  v1-devops_ansible.json  v1-documentation_starter.json  v1-example.json  v1-frontend_addon.json  v1-monorepo_addon.json  v1-project.json  v1-seven_addon.json  v1-sub-addon_settings.json  v1-sub-cache.json  v1-sub-classic_project_settings.json  v1-sub-frontend_project.json  v1-sub-project_settings.json  v2-sub-project_settings.json
tests/_resources/dummy_package/: README.md  pyproject.toml
tests/_resources/dummy_package/src/dummy/: configure_zcml  settings.py
tests/_resources/dummy_package/src/dummy/profiles/default/: metadata_xml  rolemap_xml
tests/_resources/git_config/: config-01  config-02  config-03
tests/_resources/plone/: metadata.xml
tests/_resources/templates_repo_config/: cookieplone-config.json
tests/_resources/templates_sub_folder/: cookiecutter.json
tests/_resources/user_config/: badconfig  badconfig_list  cookiecutterrc  cookieplonerc  userconfig
tests/cli/: test_cli_converter.py
tests/config/: conftest.py  test_apply_overwrites_recursive.py  test_merge.py  test_merge_template.py  test_schemas.py  test_schemas_repository.py  test_schemas_template.py  test_state.py  test_state_versions.py  test_summary_config.py  test_user.py  test_v1.py  test_v2.py
tests/generator/: conftest.py  test_annotate_data.py  test_cookieplone.py  test_dump_answers.py  test_generate.py  test_generate_full.py  test_generate_subtemplate.py
tests/settings/: test_constants.py  test_plone_python.py  test_python_version_support.py
tests/templates/: conftest.py  test_bake.py  test_extends_fixtures.py  test_fixtures.py
tests/utils/: conftest.py  test_answers.py  test_commands.py  test_config.py  test_console.py  test_containers.py  test_cookiecutter.py  test_files.py  test_formatters.py  test_git.py  test_internal.py  test_npm.py  test_parsers.py  test_plone.py  test_post_gen.py  test_repository.py  test_sanity.py  test_subtemplates.py  test_summary.py  test_utils_validators.py  test_validators.py  test_versions.py
tests/validators/: test_validators.py
tests/wizard/: conftest.py  test_confirmation_order.py  test_go_back_and_review.py  test_parser.py  test_prepare_extensions.py  test_wizard.py
(+13 files in other folders)
