[project]
name = "cookieplone"
description = "Create Plone projects, addons, documentation with ease!"
dynamic = ["version"]
authors = [
  { name = "Plone Community", email = "dev@plone.org" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["Plone", "cookiecutter", "code generator"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Software Development :: Code Generators"
]
dependencies = [
  "cookiecutter==2.6.0",
  "semver==3.0.2",
  "typer==0.12.3",
  "packaging==24.0",
  "gitpython==3.1.43",
  "xmltodict==0.13.0",
  "black==24.4.2",
  "isort",
  "zpretty"
]

[project.entry-points.pytest11]
cookieplone = "cookieplone.templates.fixtures"

[project.scripts]
cookieplone = 'cookieplone.__main__:main'

[project.urls]
Documentation = "https://github.com/plone/cookieplone#readme"
Issues = "https://github.com/plone/cookieplone/issues"
Source = "https://github.com/plone/cookieplone"

[tool.hatch.version]
path = "cookieplone/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest==8.1.1",
  "pytest-cov==5.0.0",
  "pre-commit==3.7.0",
  "towncrier==23.11.0",
  "hatchling==1.24.2",
  "zest.releaser[recommended]==9.1.3",
  "zestreleaser.towncrier==1.3.0"
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
check = [
  "pre-commit run -a"
]
changelog-draft = "towncrier --draft"

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.coverage.run]
source_pkgs = ["cookieplone", "tests"]
branch = true
parallel = true
omit = [
  "cookieplone/__init__.py",
]

[tool.coverage.paths]
cookieplone = ["cookieplone", "*/cookieplone/cookieplone"]
tests = ["tests", "*/cookieplone/tests"]

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
]
lint.ignore = [
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.towncrier]
package = "cookieplone"
directory = "news/"
filename = "CHANGES.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
template = "news/.changelog_template.jinja"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://github.com/plone/cookieplone/issues/{issue})"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes:"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal:"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation:"
showcontent = true

[[tool.towncrier.type]]
directory = "tests"
name = "Tests"
showcontent = true

[tool.zest-releaser]
python-file-with-version = "cookieplone/__init__.py"
